Correct color and sizes added to paragraphs, pane-titles (h1, h2, h3 etc.) and more. Alignment improvements

--- a/public_html/profiles/os2sub/themes/custom/site_6juli/src/scss/custom/components/_page-layout.scss
+++ b/public_html/profiles/os2sub/themes/custom/site_6juli/src/scss/custom/components/_page-layout.scss
@@ -19,6 +19,10 @@ $xs-page-layout-content-inner-padding-bottom: 25px;
 $sm-page-layout-content-inner-padding-bottom: 40px;
 $md-page-layout-content-inner-padding-bottom: 60px;
 
+// Color on headings
+
+$section-heading-color: #386c87;
+
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
@@ -31,7 +35,7 @@ body {
   font-size: 1.0625em;
 }
 
-.contextual-links-region.panel-pane.pane-custom.pane-1.call-to-action{
+.call-to-action{
     text-align: center;
     background-color: $color-btn;
     color: $color-light-background;
@@ -40,11 +44,30 @@ body {
     }
 }
 
+.panel-pane .pane-custom .pane-1 {
+    
+    display: none;
+}
+
+#block-system-main .col-xs-12 {
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#block-system-main .panel-pane {
+    
+    max-width: 1024px;
+    padding: 20px;
+}
+
 h1.page-header,
 h1.pane-title {
   font-family: $font-droid-serif;
   font-weight: bold;
-  font-size: 2.625em;
+  font-size: 4.625em;
   color: $color-primary;
   border: 0;
 }
@@ -53,16 +76,16 @@ h2.page-header,
 h2.pane-title {
   font-family: $font-droid-serif;
   font-weight: bold;
-  font-size: 3.25em;
-  color: $color-font-dark;
+  font-size: 4.25em;
+  color: $section-heading-color;
   border: 0;
 } 
 h2.pane-fb-likebox-0,
 h2.pane-title {
   font-family: $font-droid-serif;
   font-weight: bold;
-  font-size: 3.25em;
-  color: $color-font-dark;
+  font-size: 4.25em;
+  color: $section-heading-color;
   border: 0;
 } 
 .event-teaser{
@@ -70,8 +93,8 @@ h2.pane-title {
   h2.pane-title {
 	font-family: $font-droid-serif;
 	font-weight: bold;
-	font-size: 2.625em;
-	color: $color-font-dark;
+	font-size: 4.625em;
+	color: $section-heading-color;
 	border: 0;
   }
 }
@@ -81,6 +104,10 @@ h3.pane-title {
   font-size: 1.25em;
   text-transform: uppercase;
   color: $color-font-dark-secondary;
+}
+
+p {
+    font-size: 1.5em;
 }
 
 .content {
