--- a/public_html/profiles/os2sub/themes/custom/site_6juli/src/scss/custom/components/_pagination.scss
+++ b/public_html/profiles/os2sub/themes/custom/site_6juli/src/scss/custom/components/_pagination.scss
@@ -14,8 +14,8 @@ $pagination-element-spacing: 8px;
 $pagination-element-border-width: 3px;
 $pagination-element-border-color: transparent;
 $pagination-element-border-radius: 100px;
-$pagination-element-height: 25px;
-$pagination-element-width: 25px;
+$pagination-element-height: 20px;
+$pagination-element-width: 20px;
 
 $pagination-element-active-border-width: $pagination-element-border-width;
 
